fix(front): fix slashes & white spaces in admin & front

--- a/public/assets/jobpass.css
+++ b/public/assets/jobpass.css
@@ -75,15 +75,15 @@
 }
 
 .card {
-  padding:3rem 20px;
+  padding: 3rem 20px;
   background-color: #fff;
   border-radius: 9px;
   height: 100%;
-  box-shadow: 0 1rem 3rem rgba(0,0,0,.175)!important;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175) !important;
 }
 
 .job_offers_list .col-md-4 {
-  margin-bottom: 2.8rem
+  margin-bottom: 2.8rem;
 }
 
 .jobpass-content {
@@ -204,113 +204,114 @@ a.btnJobPass:hover {
   .col-md-3 {
     flex: 0 0 25%;
     max-width: 25%;
-}
-@media (min-width: 992px) {
-  .container {
-    max-width: 960px;
   }
-}
-
-@media (min-width: 1200px) {
-  .container {
-    max-width: 1140px;
+  @media (min-width: 992px) {
+    .container {
+      max-width: 960px;
+    }
   }
-}
 
-@media (min-width: 1400px) {
-  .container {
-    max-width: 1320px;
+  @media (min-width: 1200px) {
+    .container {
+      max-width: 1140px;
+    }
   }
-}
 
-@media screen and (max-width: 767px) {
-  .col,
-  .col-1,
-  .col-10,
-  .col-11,
-  .col-12,
-  .col-2,
-  .col-3,
-  .col-4,
-  .col-5,
-  .col-6,
-  .col-7,
-  .col-8,
-  .col-9,
-  .col-auto,
-  .col-lg,
-  .col-lg-1,
-  .col-lg-10,
-  .col-lg-11,
-  .col-lg-12,
-  .col-lg-2,
-  .col-lg-3,
-  .col-lg-4,
-  .col-lg-5,
-  .col-lg-6,
-  .col-lg-7,
-  .col-lg-8,
-  .col-lg-9,
-  .col-lg-auto,
-  .col-md,
-  .col-md-1,
-  .col-md-10,
-  .col-md-11,
-  .col-md-12,
-  .col-md-2,
-  .col-md-3,
-  .col-md-4,
-  .col-md-5,
-  .col-md-6,
-  .col-md-7,
-  .col-md-8,
-  .col-md-9,
-  .col-md-auto,
-  .col-sm,
-  .col-sm-1,
-  .col-sm-10,
-  .col-sm-11,
-  .col-sm-12,
-  .col-sm-2,
-  .col-sm-3,
-  .col-sm-4,
-  .col-sm-5,
-  .col-sm-6,
-  .col-sm-7,
-  .col-sm-8,
-  .col-sm-9,
-  .col-sm-auto,
-  .col-xl,
-  .col-xl-1,
-  .col-xl-10,
-  .col-xl-11,
-  .col-xl-12,
-  .col-xl-2,
-  .col-xl-3,
-  .col-xl-4,
-  .col-xl-5,
-  .col-xl-6,
-  .col-xl-7,
-  .col-xl-8,
-  .col-xl-9,
-  .col-xl-auto {
-    padding-left: 18px;
-    padding-right: 18px;
+  @media (min-width: 1400px) {
+    .container {
+      max-width: 1320px;
+    }
   }
-}
 
-.jp_offer-metas {
-  color: var(--text-color);
-  display: flex;
-  margin-left: 0;
-  list-style: none;
-}
+  @media screen and (max-width: 767px) {
+    .col,
+    .col-1,
+    .col-10,
+    .col-11,
+    .col-12,
+    .col-2,
+    .col-3,
+    .col-4,
+    .col-5,
+    .col-6,
+    .col-7,
+    .col-8,
+    .col-9,
+    .col-auto,
+    .col-lg,
+    .col-lg-1,
+    .col-lg-10,
+    .col-lg-11,
+    .col-lg-12,
+    .col-lg-2,
+    .col-lg-3,
+    .col-lg-4,
+    .col-lg-5,
+    .col-lg-6,
+    .col-lg-7,
+    .col-lg-8,
+    .col-lg-9,
+    .col-lg-auto,
+    .col-md,
+    .col-md-1,
+    .col-md-10,
+    .col-md-11,
+    .col-md-12,
+    .col-md-2,
+    .col-md-3,
+    .col-md-4,
+    .col-md-5,
+    .col-md-6,
+    .col-md-7,
+    .col-md-8,
+    .col-md-9,
+    .col-md-auto,
+    .col-sm,
+    .col-sm-1,
+    .col-sm-10,
+    .col-sm-11,
+    .col-sm-12,
+    .col-sm-2,
+    .col-sm-3,
+    .col-sm-4,
+    .col-sm-5,
+    .col-sm-6,
+    .col-sm-7,
+    .col-sm-8,
+    .col-sm-9,
+    .col-sm-auto,
+    .col-xl,
+    .col-xl-1,
+    .col-xl-10,
+    .col-xl-11,
+    .col-xl-12,
+    .col-xl-2,
+    .col-xl-3,
+    .col-xl-4,
+    .col-xl-5,
+    .col-xl-6,
+    .col-xl-7,
+    .col-xl-8,
+    .col-xl-9,
+    .col-xl-auto {
+      padding-left: 18px;
+      padding-right: 18px;
+    }
+  }
 
-.jp_offer-metas li {
-  margin-left: 0;
-  margin-right: 1.5rem;
-  font-size: 1rem;
-}
-.jp_offer-metas li i {
-  margin-right: 2px;
+  .jp_offer-metas {
+    color: var(--text-color);
+    display: flex;
+    margin-left: 0;
+    list-style: none;
+  }
+
+  .jp_offer-metas li {
+    margin-left: 0;
+    margin-right: 1.5rem;
+    font-size: 1rem;
+  }
+  .jp_offer-metas li i {
+    margin-right: 2px;
+  }
 }
